robballen75-Salesforce/4-7-15/src/objects/CRCN_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Settings related to the Client Relations Contact Notification mechanism</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indication if the Contact Notification should be active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customers_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if notification should be sent only when oat least one of the accounts involved in an employment change (or a new contact) is a customer.</description>
        <label>Customers Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Address__c</fullName>
        <description>Email address the notifications should be sent to</description>
        <label>Notification Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_Display_Name__c</fullName>
        <description>Display name for the sender of the email notification.  This is what will show up in the From column of the Outlook inbox.</description>
        <label>Sender Display Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Client Relations Contact Notification</label>
</CustomObject>